--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         </title>
     </head>
     <body>
-        my self Arpit Khandelwal 
-        What can i do for you??
+        my self Arpit Khandelwal <br>
+        What can i do for you?? <br>
         whats ur problem brooo???
     </body>
 </html>
