--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         my self Arpit Khandelwal 
         <br>What can i do for you??<br>
         <br>whats ur problem brooo???<br>
-        I Love u
+        <br>I Love u
     </body>
 </html>
