--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <html>
+    <link rel="stylesheet" href="style.css">
     <head>
         <title>
-            Welcome to my site
+            Resume
         </title>
     </head>
     <body>
-        my self Arpit Khandelwal 
-        What can i do for you??
-        whats ur problem brooo???
+        <h3>
+            Arpit Khandelwal
+        </h3>
+        <img src="pic.png.jpg" alt="candidate pic" height="100">
+        <pre> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+ Numquam doloremque aspernatur consectetur eligendi. Libero
+ amet perspiciatis vero obcaecati nihil ratione animi explicabo. 
+ Aliquid, dolor.Voluptates ipsa dolorum consectetur laborum totam?</pre>
+        <br>
+        <hr>
+        <audio src="unstoppable.mp3" controls  loop></audio>
+        <h4>Contact</h4>
+        
+        <a href="mailto:arpi2733@gmail.com" title="want to sends a mail" target="_blank">
+            <img src="mail.jpg" alt="Mail logo" height="50" >
+        </a>
+        <a href="https://www.linkedin.com/in/arpit-khandelwal-b24020283/" title="view linkedin profile" target="_blank"><img src="linkedin.png" alt="linkedin logo" width="50"><br></a>
+        <p></p>
+        <h4>Education</h4>
+        <table border="2px">
+            <tr>
+                <th>
+                    <h4>Qualifications</h4>
+                </th>
+                <th>
+                    <h4>School/College</h4>
+                </th>
+                <th>
+                    <h4>Board/University</h4>
+                </th>
+                <th>
+                    <h4>Percentage</h4>
+                </th>
+            </tr>
+            <tr>
+                <td>Secondary School  </td>
+                <td>MD Jain Public School</td>
+                <td>CBSE</td>
+                <td>77%</td>
+            </tr>
+            <tr>
+                <td>Senior Secondary School  </td>
+                <td>MD Jain Public School</td>
+                <td>CBSE</td>
+                <td>80.4%</td>
+            </tr>
+            <tr>
+                <td>B-tech  </td>
+                <td>GL Bajaj Group of Institutions</td>
+                <td>AKTU</td>
+                <td>null</td>
+            </tr>
+        </table>
+        <br>
+        <h4>Skills</h4>
+
+        <label for="title" aria-setsize="35"><b>Remarks:</b></label>
+
+        <label for="title">Good</label>
+        <input type="radio" id="nothing" value="Mr." name="title">
+        <label for="title">average</label>
+        <input type="radio" id="nothing" value="Mr." name="title">
+        <label for="title">away from ur understanding</label>
+        <input type="radio" id="nothing" value="Mr." name="title">
+        <br>
+
+
+        <label for="suggestion" aria-setsize="35"><b>suggestion:</b></label><br>
+        <textarea name="suggestion" id="" cols="30" rows="5"></textarea>
+
     </body>
 </html>
