--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
         <h3>
             Arpit Khandelwal
         </h3>
-        <img src="pic.png.jpg" alt="candidate pic" height="100">
-        <pre> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        <img src="pic.png.jpg" alt="candidate pic" height="130" id="img1">
+        <div id="div1"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eum expedita repellat voluptatem commodi nesciunt nam dignissimos ipsa repudiandae quae similique at animi minus, quis deserunt aperiam facere rem id.</p>
+        <pre id="pre1"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
  Numquam doloremque aspernatur consectetur eligendi. Libero
  amet perspiciatis vero obcaecati nihil ratione animi explicabo. 
- Aliquid, dolor.Voluptates ipsa dolorum consectetur laborum totam?</pre>
+ Aliquid, dolor.Voluptates ipsa dolorum consectetur laborum totam?</pre></div>
         <br>
         <hr>
         <audio src="unstoppable.mp3" controls  loop></audio>
         <h4>Contact</h4>
-        
+        <div id="div2">
         <a href="mailto:arpi2733@gmail.com" title="want to sends a mail" target="_blank">
             <img src="mail.jpg" alt="Mail logo" height="50" >
         </a>
-        <a href="https://www.linkedin.com/in/arpit-khandelwal-b24020283/" title="view linkedin profile" target="_blank"><img src="linkedin.png" alt="linkedin logo" width="50"><br></a>
+        <a href="https://www.linkedin.com/in/arpit-khandelwal-b24020283/" title="view linkedin profile" target="_blank"><img src="linkedin.png" alt="linkedin logo" width="50"></a>
+        </div>
         <p></p>
         <h4>Education</h4>
-        <table border="2px">
+        <table border="2px" id="t1">
             <tr>
                 <th>
                     <h4>Qualifications</h4>
