add fake details

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h3>
-            Arpit Khandelwal
+            Virat Kohli
         </h3>
-        <img src="pic.png.jpg" alt="candidate pic" height="130" id="img1">
+        <img src="hey.avif" alt="candidate pic" height="130" id="img1">
         <div id="div1"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eum expedita repellat voluptatem commodi nesciunt nam dignissimos ipsa repudiandae quae similique at animi minus, quis deserunt aperiam facere rem id.</p>
         <pre id="pre1"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
  Numquam doloremque aspernatur consectetur eligendi. Libero
@@ -44,15 +44,15 @@
             </tr>
             <tr>
                 <td>Secondary School  </td>
-                <td>MD Jain Public School</td>
+                <td>Delhi Public School</td>
                 <td>CBSE</td>
                 <td>77%</td>
             </tr>
             <tr>
                 <td>Senior Secondary School  </td>
-                <td>MD Jain Public School</td>
+                <td>Delhi Public School</td>
                 <td>CBSE</td>
-                <td>80.4%</td>
+                <td>Fail</td>
             </tr>
             <tr>
                 <td>B-tech  </td>
