--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
         </table>
         <br>
         <h4>Skills</h4>
+        <div id="div3">
+        <pre id="t1">
+    <b>OOPS with Java
+    HTML and css
+    JavaScript
+    DSA with Java</b></pre>
+        </div>
+        <h4>Experience</h4>
 
         <label for="title" aria-setsize="35"><b>Remarks:</b></label>
 
