--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
             Resume
         </title>
     </head>
+    <nav class="nav1">
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">My Project</a></li>
+            <li><a href="work.html">My Work</a></li>
+        </ul>
+    </nav>
     <body>
         <h3>
             Virat Kohli
         </h3>
+        <a href="meme.mp4" title="dont open this" target="_blank"><button>Click here</button></a>
         <img src="hey.avif" alt="candidate pic" height="130" id="img1">
         <div id="div1"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eum expedita repellat voluptatem commodi nesciunt nam dignissimos ipsa repudiandae quae similique at animi minus, quis deserunt aperiam facere rem id.</p>
         <pre id="pre1"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -71,7 +79,13 @@
     DSA with Java</b></pre>
         </div>
         <h4>Experience</h4>
+        <div id="div4">
+            <pre>   <b>Fresher</b></pre>
+        </div>
+        
+        
 
+        <br>
         <label for="title" aria-setsize="35"><b>Remarks:</b></label>
 
         <label for="title">Good</label>
@@ -87,4 +101,12 @@
         <textarea name="suggestion" id="" cols="30" rows="5"></textarea>
 
     </body>
+    <footer>
+        <div id="div5" class="pagenation">
+            <a href=""><</a>
+            <a href="page1.html">1</a>
+            <a href="page2.html">2</a>
+            <a href="page1.html">></a>
+        </div>
+    </footer>
 </html>
