clock and stopwatch

--- a/project.html
+++ b/project.html
@@ -1,3 +1,16 @@
-<h1>My Projects are given below:</h1><br>
-<a href="counter.html">Counter program</a><br>
-<a href="temp.html">Temperature conversion</a>
+<html lang="en">
+    <link rel="stylesheet" href="project.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My Projects are given below:</h1><br>
+<a href="counter.html">→Counter program</a><br>
+<a href="temp.html">→Temperature conversion</a><br>
+<a href="clock.html">→Digital Clock</a><br>
+<a href="swatch.html">→Stopwatch</a>
+    
+</body>
+</html>
