--- a/temp.html
+++ b/temp.html
@@ -17,6 +17,7 @@
         <p id="result">Select a unit</p>
         <script src="temperature conversion.js"></script>
     </form>
+    <h1 id="head1"  ><script src="clock.js"></script></h1>
     
 </body>
 </html>
