--- a/counter.html
+++ b/counter.html
@@ -15,6 +15,6 @@
         <button id="reset" class="but">reset</button>
         <button id="ran" class="but">random</button>
     </div>
-    <script src="index.js"></script>
+    <script src="counter.js"></script>
 </body>
 </html>
