--- a/swatch.html
+++ b/swatch.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <h1>Stop Watch</h1>
+</head>
 </head>
 <body>
     <h1 id="head1">00:00:00:00</h1>
