--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             Lucy(Software Engineer)
         </h3>
         <a href="meme.mp4" title="dont open this" target="_blank"><button>Click here</button></a>
-        <button id="mode" width="30" onclick="changeMode()">Switch to DarkMode</button>
-        <img src="" alt="candidate pic" height="130" id="img1">
-        <div id="div1" class="first"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eum expedita repellat voluptatem commodi nesciunt nam dignissimos ipsa repudiandae quae similique at animi minus, quis deserunt aperiam facere rem id.</p>
+        <button id="mode" width="30" onclick="changeMode()">Switch to DarkMode</button><br>
+        <br>
+        <div id="div1" class="first"><img src="" alt="candidate pic" height="130" id="img1">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eum expedita repellat voluptatem commodi nesciunt nam dignissimos ipsa repudiandae quae similique at animi minus, quis deserunt aperiam facere rem id.</p>
         <pre> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
  Numquam doloremque aspernatur consectetur eligendi. Libero
  amet perspiciatis vero obcaecati nihil ratione animi explicabo. 
