--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <body>
         <h3 id="quote" class="second">Quote😊 :</h4>
         <h3 class="second">
-            Lucy(Software Engineer)
+            Jimmy(Software Engineer)
         </h3>
         <a href="meme.mp4" title="dont open this" target="_blank"><button>Click here</button></a>
         <button id="mode" width="30" onclick="changeMode()">Switch to DarkMode</button><br>
         <br>
-        <div id="div1" class="first"><img src="" alt="candidate pic" width="25%" height="45%" id="img1">
+        <div id="div1" class="first"><img src="" alt="candidate pic" id="img1">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eum expedita repellat voluptatem commodi nesciunt nam dignissimos ipsa repudiandae quae similique at animi minus, quis deserunt aperiam facere rem id.</p>
         <pre> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
  Numquam doloremque aspernatur consectetur eligendi. Libero
