--- a/project.html
+++ b/project.html
@@ -11,6 +11,7 @@
 <a href="temp.html">→Temperature conversion</a><br>
 <a href="clock.html">→Digital Clock</a><br>
 <a href="swatch.html">→Stopwatch</a>
+<a href="InfiniteScrolling.html">→Infinite Scrolling</a>
     
 </body>
 </html>
