--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 <a href="counter.html">→Counter program</a><br>
 <a href="temp.html">→Temperature conversion</a><br>
 <a href="clock.html">→Digital Clock</a><br>
-<a href="swatch.html">→Stopwatch</a>
+<a href="swatch.html">→Stopwatch</a><br>
 <a href="InfiniteScrolling.html">→Infinite Scrolling</a>
     
 </body>
