--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
  Aliquid, dolor.Voluptates ipsa dolorum consectetur laborum totam?</pre></div>
         <br>
         <hr>
-        <audio src="unstoppable.mp3" controls  loop ></audio>
+        <audio src="unstoppable.mp3" loop ></audio><br>
+        <video src="meme.mp4"  style="width: 50%" autoplay loop></video>
         <h4 class="second">Contact</h4>
         <div id="div2" class="first">
         <a id="a1" href="mailto:arpi2733@gmail.com" title="want to sends a mail" target="_blank">
