--- a/project.html
+++ b/project.html
@@ -12,6 +12,7 @@
 <a href="clock.html">→Digital Clock</a><br>
 <a href="swatch.html">→Stopwatch</a><br>
 <a href="InfiniteScrolling.html">→Infinite Scrolling</a>
+<a href="chat.html">Chat App(for one v one Only)</a>
     
 </body>
 </html>
